# altar_server_plan_creator

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-image.yml
app/: __init__.py  altar_server.py  altar_servers.py  date_handler.py  event_calendar.py  holy_mass.py  latex_handler.py  main.py  plan_info.py  server_handler.py
app/altar_server/: altar_servers.py
app/altar_servers/: __init__.py  altar_server.py  altar_servers.py  queue_manager.py  scheduling_unit.py  server_handler.py
app/dates/: __init__.py  calendar.py  date_handler.py  day.py  holy_mass.py
app/events/: __init__.py  event.py  event_calendar.py  event_day.py
app/plan_info/: __init__.py  plan_info.py
app/templates/: index.html
app/test/: altar_server.py  altar_servers_test.yaml  plan.py
app/utils/: __init__.py  exceptions.py  latex_handler.py  utils.py
app/z3Solver/: z3solver.py
config/: __init__.py  altar_servers.config.json  holy_masses.config.json  plan_info.config.json  schema_dump.py
